kitty and yazi added; ags on the move

--- a/home/.config/hypr/keybinds.conf
+++ b/home/.config/hypr/keybinds.conf
@@ -3,8 +3,8 @@ binds {
     
     bind = CTRL, Space, global, kando:main-menu
 
-    bind = SUPER, RETURN, exec, alacritty
-    bind = ALT, RETURN, exec, [float; pin; move 73% 5%; size 25% 20%] alacritty
+    bind = SUPER, RETURN, exec, kitty
+    bind = ALT, RETURN, exec, [float; pin; move 73% 5%; size 25% 20%] kitty
     
     bind = SUPER, C, setfloating
     bind = SUPER, C, resizeactive, exact 70% 60%
@@ -31,6 +31,7 @@ binds {
     bind = CTRL_ALT, L, exec, hyprlock
     bind = CTRL_ALT, I, exec, pgrep -x chromium > /dev/null && pkill -x chromium || chromium --app=https://chat.openai.com &
     bind = CTRL_ALT, V, exec, alacritty -o "window.opacity=0.0" -t "cava" -e "cava"
+    bind = CTRL_ALT, A, exec, pkill ags; ags
     bind = CTRL_ALT, p, exec, eww active-windows | grep panel -q && eww close panel || eww open panel --screen $(~/.config/hypr/scripts/monitor.sh -m $(~/.config/hypr/scripts/monitor.sh -A))
 
     # Move focus with mainMod + arrow keys
