--- a/home/.config/hypr/rules.conf
+++ b/home/.config/hypr/rules.conf
@@ -1,35 +1,43 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/
 
 windowrules {
-    windowrulev2 = size 50% 30%, class:^(.*xdg-desktop-portal-gtk.*)
+    windowrulev2 = size 50% 50%, class:^(.*xdg-desktop-portal-gtk.*)
     windowrulev2 = float, class:^(.*xdg-desktop-portal-gtk.*)
     windowrulev2 = move 25% 25%, class:^(.*xdg-desktop-portal-gtk.*)
-
+    windowrulev2 = opacity 0.99 override 0.99 override, class:^(.*xdg-desktop-portal-gtk.*)
 
     # ------------------------------
-    # ---------- Alacritty ---------
+    # ------------ Kitty -----------
     # ------------------------------
-    windowrulev2 = float, class:^(.*Alacritty.*)$,title:^(.*float.*)
-    windowrulev2 = size 50% 50%, class:^(.*Alacritty.*)$,title:^(.*float.*)
-    windowrulev2 = move 25% 25%, class:^(.*Alacritty.*)$,title:^(.*float.*)
-    
-    windowrulev2 = opacity 0.95 override 0.9 override, class:^(.*Alacritty.*)$,title:^(.*float.*)
-    windowrulev2 = fullscreen, class:^(.*Alacritty.*),title:^(.*full.*)
+    windowrulev2 = float, class:^(.*kitty.*)$,title:^(.*float.*)
+    windowrulev2 = size 50% 50%, class:^(.*kitty.*)$,title:^(.*float.*)
+    windowrulev2 = move 25% 25%, class:^(.*kitty.*)$,title:^(.*float.*)
 
-    # ------ Cava
-    windowrulev2 = opacity 0.98 override 0.98 override, class:^(.*Alacritty.*)$,title:^(.*cava.*)
-    windowrulev2 = noblur, class:^(.*Alacritty.*)$,title:^(.*cava.*)
-    windowrulev2 = noborder, class:^(.*Alacritty.*)$,title:^(.*cava.*)
-    windowrulev2 = noshadow, class:^(.*Alacritty.*)$,title:^(.*cava.*)
-    windowrulev2 = float, class:^(.*Alacritty.*)$,title:^(.*cava.*)
-    windowrulev2 = pin, class:^(.*Alacritty.*)$,title:^(.*cava.*)
-    windowrulev2 = move -0.25% 82%, class:^(.*Alacritty.*)$,title:^(.*cava.*)
-    windowrulev2 = size 102% 20%, class:^(.*Alacritty.*),title:^(.*cava.*)
 
-    # ------ Networkmanger TUI
-    windowrulev2 = bordercolor rgb(f7768e), class:^(.*Alacritty.*),title:^(.*nwtui.*)
-    windowrulev2 = move 25% 25%, class:^(.*Alacritty.*),title:^(.*nwtui.*)
-    windowrulev2 = size 50% 50%, class:^(.*Alacritty.*),title:^(.*nwtui.*)
+    # # ------------------------------
+    # # ---------- Alacritty ---------
+    # # ------------------------------
+    # windowrulev2 = float, class:^(.*Alacritty.*)$,title:^(.*float.*)
+    # windowrulev2 = size 50% 50%, class:^(.*Alacritty.*)$,title:^(.*float.*)
+    # windowrulev2 = move 25% 25%, class:^(.*Alacritty.*)$,title:^(.*float.*)
+
+    # windowrulev2 = opacity 0.95 override 0.9 override, class:^(.*Alacritty.*)$,title:^(.*float.*)
+    # windowrulev2 = fullscreen, class:^(.*Alacritty.*),title:^(.*full.*)
+
+    # # ------ Cava
+    # windowrulev2 = opacity 0.98 override 0.98 override, class:^(.*Alacritty.*)$,title:^(.*cava.*)
+    # windowrulev2 = noblur, class:^(.*Alacritty.*)$,title:^(.*cava.*)
+    # windowrulev2 = noborder, class:^(.*Alacritty.*)$,title:^(.*cava.*)
+    # windowrulev2 = noshadow, class:^(.*Alacritty.*)$,title:^(.*cava.*)
+    # windowrulev2 = float, class:^(.*Alacritty.*)$,title:^(.*cava.*)
+    # windowrulev2 = pin, class:^(.*Alacritty.*)$,title:^(.*cava.*)
+    # windowrulev2 = move -0.25% 82%, class:^(.*Alacritty.*)$,title:^(.*cava.*)
+    # windowrulev2 = size 102% 20%, class:^(.*Alacritty.*),title:^(.*cava.*)
+
+    # # ------ Networkmanger TUI
+    # windowrulev2 = bordercolor rgb(f7768e), class:^(.*Alacritty.*),title:^(.*nwtui.*)
+    # windowrulev2 = move 25% 25%, class:^(.*Alacritty.*),title:^(.*nwtui.*)
+    # windowrulev2 = size 50% 50%, class:^(.*Alacritty.*),title:^(.*nwtui.*)
 
 
     # ---------------------------
