--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -26,7 +26,7 @@ exec = killall -9 ags; ags
 # --------------------- PLUGINS -----------------------
 # -----------------------------------------------------
 exec-once = hyprpaper
-exec-once = hypridle
+exec = pkill hypridle; hypridle
 
 
 # -----------------------------------------------------
