--- a/home/.config/hypr/hyprlock.conf
+++ b/home/.config/hypr/hyprlock.conf
@@ -32,14 +32,14 @@ background {
 # -----------------------------------------------------------------------
 input-field {
     monitor =
-    size = 600, 30
+    size = 600, 50
     outline_thickness = 8
     dots_size = 0.6
     dots_spacing = 0.8
     dots_center = true
     outer_color = rgba(230, 230, 230, 0.0)
     inner_color = rgba(230, 230, 230, 0.0)
-    font_color = rgba(49, 183, 242, 0.75)
+    font_color = rgba(236, 72, 166, 0.65)  # rgba(49, 183, 242, 0.75)
     fade_on_empty = true
     fade_timeout = 1000
     placeholder_text =
@@ -55,7 +55,7 @@ input-field {
     invert_numlock = false
     swap_font_color = false
 
-    position = 0, 225
+    position = 0, 425
     halign = center
     valign = bottom
 }
@@ -64,7 +64,7 @@ label {
     monitor =
     text = $ATTEMPTS[just start typing]
     color = rgba(239, 236, 254, 0.35)
-    font_size = 18
+    font_size = 28
     font_family = SF Pro Display
 
     position = 0, 50
@@ -79,12 +79,12 @@ label {
     monitor =
     text = cmd[update:1000] echo "<b><big> $(date +"%H:%M") </big></b>"
     color = rgba(241, 192, 125, 1.0)
-    font_size = 120
+    font_size = 175
     font_family = SF Pro Display Bold
     shadow_passes = 3
     shadow_size = 4
 
-    position = 0, -50
+    position = 0, 50
     halign = center
     valign = center
 }
@@ -93,7 +93,7 @@ label {
     monitor =
     text = cmd[update:1000] echo "<b> "$(date +'%A, %-d. %B %Y')" </b>"
     color = rgba(239, 236, 254, 1.0)
-    font_size = 32
+    font_size = 46
     font_family = SF Pro Display
 
     position = 0, -150
@@ -108,9 +108,9 @@ label {
     monitor =
     text = cmd[update:10000] echo "$USER"
     color = rgba(49, 183, 242, 0.75)
-    font_size = 26
+    font_size = 32
     font_family = SF Pro Display Bold
-    position = 52, -325
+    position = 77, -475
     halign = center
     valign = top
 }
@@ -119,9 +119,9 @@ label {
     monitor =
     text = cmd[update:10000] echo " "
     color = rgba(242, 243, 244, 1.0)
-    font_size = 24
+    font_size = 32
     font_family = SF Pro Display Bold
-    position =-18, -325
+    position =-18, -475
     halign = center
     valign = top
 }
@@ -132,7 +132,7 @@ image {
     opacity = 0.5
     border_color = rgba(239, 236, 254, 0.50)
     border_size = 5
-    size = 200
+    size = 350
     rounding = -1
     rotate = 0
     reload_time = -1
@@ -149,7 +149,7 @@ label {
     monitor =
     text = cmd[update:1000] echo "$(~/.config/hypr/scripts/player.sh --source) "
     color = rgba(239, 236, 254, 1.0)
-    font_size = 24
+    font_size = 36
     font_family = SF Pro Display Bold
     position = 100, -200
     halign = left
@@ -160,9 +160,9 @@ label {
     monitor =
     text = cmd[update:1000] echo "$(~/.config/hypr/scripts/player.sh --artist)"
     color = rgba(239, 236, 254, 1.0)
-    font_size = 18
+    font_size = 27
     font_family = SF Pro Display Bold
-    position = 150, -270
+    position = 180, -300
     halign = left
     valign = top
 }
@@ -171,9 +171,9 @@ label {
     monitor =
     text = cmd[update:1000] echo "$(~/.config/hypr/scripts/player.sh --title)"
     color = rgba(239, 236, 254, 0.5)
-    font_size = 18
+    font_size = 27
     font_family = SF Pro Display
-    position = 150, -310
+    position = 180, -350
     halign = left
     valign = top
 }
@@ -182,9 +182,9 @@ label {
     monitor =
     text = cmd[update:1000] echo "$(~/.config/hypr/scripts/player.sh --album)"
     color = rgba(239, 236, 254, 1.0)
-    font_size = 14
+    font_size = 21
     font_family = SF Pro Display Italic
-    position = 150, -360
+    position = 180, -450
     halign = left
     valign = top
 }
@@ -192,13 +192,13 @@ label {
 image {
     monitor =
     path = 
-    size = 200
+    size = 350
     rounding = 3 
     border_size = 1
     rotate = 0
     reload_time = 2
     reload_cmd = ~/.config/hypr/scripts/player.sh --arturl
-    position = 160, -430
+    position = 210, -525
     halign = left
     valign = top
     opacity=0.5
@@ -211,9 +211,9 @@ label {
     monitor =
     text = cmd[update:5000] echo -e "$(~/.config/hypr/scripts/keyboard.sh --icon)  $(~/.config/hypr/scripts/keyboard.sh --layout)"
     color = rgba(255, 255, 255, 1.0)
-    font_size = 18
+    font_size = 24
     font_family = SF Pro Display Bold
-    position = -310, -10
+    position = -380, -10
     halign = right
     valign = top
 }
@@ -223,9 +223,9 @@ label {
     monitor =
     text = cmd[update:5000] echo -e "$(~/.config/hypr/scripts/network.sh --icon) $(~/.config/hypr/scripts/network.sh --adapter)"
     color = rgba(255, 255, 255, 1.0)
-    font_size = 18
+    font_size = 24
     font_family = SF Pro Display Bold
-    position = -150, -10
+    position = -200, -10
     halign = right
     valign = top
 }
@@ -235,7 +235,7 @@ label {
     monitor =
     text = cmd[update:5000] echo -e "$(~/.config/hypr/scripts/power.sh --icon)  $(~/.config/hypr/scripts/power.sh --value)%"
     color = rgba(97, 255, 202, 1.0)
-    font_size = 18
+    font_size = 24
     font_family = SF Pro Display Bold
     position = -10, -10
     halign = right
