--- a/home/.config/hypr/keybinds.conf
+++ b/home/.config/hypr/keybinds.conf
@@ -4,7 +4,9 @@ binds {
     bind = CTRL, Space, global, kando:main-menu
 
     bind = SUPER, RETURN, exec, kitty
-    bind = ALT, RETURN, exec, [float; pin; move 73% 5%; size 25% 20%] kitty
+    # bind = ALT, RETURN, exec, [float; pin; move 73% 5%; size 25% 20%] kitty
+    bind = ALT, RETURN, exec, ags -t terminal
+    bind = CTRL_ALT, DELETE, exec, ags -t dota
     
     bind = SUPER, C, setfloating
     bind = SUPER, C, resizeactive, exact 70% 60%
