--- a/home/.config/hypr/rules.conf
+++ b/home/.config/hypr/rules.conf
@@ -6,25 +6,13 @@ windowrules {
     windowrulev2 = move 25% 25%, class:^(.*xdg-desktop-portal-gtk.*)
     windowrulev2 = opacity 0.99 override 0.99 override, class:^(.*xdg-desktop-portal-gtk.*)
 
+
     # ------------------------------
     # ------------ Kitty -----------
     # ------------------------------
     windowrulev2 = float, class:^(.*kitty.*)$,title:^(.*float.*)
     windowrulev2 = size 50% 50%, class:^(.*kitty.*)$,title:^(.*float.*)
     windowrulev2 = move 25% 25%, class:^(.*kitty.*)$,title:^(.*float.*)
-
-
-    # ------------------------------
-    # ------------ Kitty -----------
-    # ------------------------------
-    # windowrulev2 = opacity 0.98 override 0.98 override, class:^(.*Alacritty.*)$,title:^(.*cava.*)
-    # windowrulev2 = noblur, class:^(.*Alacritty.*)$,title:^(.*cava.*)
-    # windowrulev2 = noborder, class:^(.*Alacritty.*)$,title:^(.*cava.*)
-    # windowrulev2 = noshadow, class:^(.*Alacritty.*)$,title:^(.*cava.*)
-    # windowrulev2 = float, class:^(.*Alacritty.*)$,title:^(.*cava.*)
-    # windowrulev2 = pin, class:^(.*Alacritty.*)$,title:^(.*cava.*)
-    # windowrulev2 = move -0.25% 82%, class:^(.*Alacritty.*)$,title:^(.*cava.*)
-    # windowrulev2 = size 102% 20%, class:^(.*Alacritty.*),title:^(.*cava.*)
 
 
     # ---------------------------
@@ -42,6 +30,19 @@ windowrules {
     windowrulev2 = workspace 1, class:^(.*firefox.*)
     windowrulev2 = opacity 0.96 override 0.92 override, class:^(.*firefox.*)
     windowrulev2 = opacity 1 override 1 override 1 override, class:^(.*firefox.*), title:^(.*WatchSerie.*|.*Twitch.*|.*ZDFmediathek.*|.*YouTube.*|.*Livestream.*|.*F1 TV.*|.*Disney+.*|.*Netflix.*|.*Live.*)
+
+
+    # -------------------------
+    # ---------- Inkscape --------
+    # -------------------------
+    windowrulev2 = opacity 1 override 1 override 1 override, class:^(.*Inkscape.*)
+    # windowrulev2 = workspace 6, class:^(.*org.inkscape.Inkscape.*)
+    windowrulev2 = float, class:^(.*Inkscape.*)
+    # windowrulev2 = resize, exact 50% 50% class:^(.*Inkscape.*)
+    windowrulev2 = size 75% 75%, title:^(.*Inkscape.*)
+    windowrulev2 = centerwindow, class:^(.*Inkscape.*)
+    # windowrulev2 = size 40% 40%, title:^(.*org.inkscape.Inkscape.*)
+    # windowrulev2 = move 30% 30%, title:^(.*org.inkscape.Inkscape.*)
 
 
     # --------------------------
@@ -99,13 +100,14 @@ windowrules {
     # -------------------------
     # ---------- Steam --------
     # -------------------------
+    # windowrulev2 = stayfocused,class:(.*steam.*|.*TeamSpeak.*),title:(^$)
     windowrulev2 = opacity 1 override 1 override 1 override, class:^(.*steam.*|.*TeamSpeak.*)
     windowrulev2 = workspace 6, class:^(.*steam.*|.*TeamSpeak.*)
-    windowrulev2 = float, class:^(.*steam.*|.*TeamSpeak.*)
-    windowrulev2 = size 40% 40%, title:^(.*Steam.*)
-    windowrulev2 = move 30% 30%, title:^(.*Steam.*)
-    windowrulev2 = size 40% 40%, class:^(.*steam.*|.*TeamSpeak.*)
-    windowrulev2 = move 30% 30%, class:^(.*steam.*|.*TeamSpeak.*)
+    windowrulev2 = float, class:^(.*TeamSpeak.*)
+    windowrulev2 = float, class:^(.*steam.*)
+    windowrulev2 = size 60% 60%, class:^(.*steam.*), title:^(.*Steam.*)
+    windowrulev2 = centerwindow, class:^(.*steam.*), title:^(.*Steam.*)
+    windowrulev2 = centerwindow, class:^(.*TeamSpeak.), title:^(.*TeamSpeak.*)
 
     windowrulev2 = opacity 1 override 1 override 1 override, class:^(.*ShadowOfTheTombRaider.*)
     windowrulev2 = opacity 1 override 1 override 1 override, class:^(.*KOTOR2.*)
