--- a/home/.config/hypr/autostart.conf
+++ b/home/.config/hypr/autostart.conf
@@ -1,7 +1,6 @@
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+# https://wiki.archlinux.org/title/Polkit
+exec = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 || hyprctl notify -1 10000 "rgb(ff1ea3)" "polkit-gnome could not be started."
 
-# exec = killall -9 eww; eww daemon
-# Differentiate where the bar is shown. For the lenovo laptop,
-# the bar is also resized to fix for the scaling 1.25.
-# exec = sudo dmidecode -t 2 | grep Z790-E && eww open bar --screen "ROG XG27UQR"
-# exec = sudo dmidecode -t 2 | grep LENOVO -q && `hyprctl monitors | grep "DP-3" -q && eww open bar --screen 1 --size 1536x20 || eww open bar --screen 0 --size 1536x20`
+# https://aylur.github.io/ags-docs/
+exec = killall -9 ags; ags
+exec = pgrep ags || hyprctl notify -1 10000 "rgb(ff1ea3)" "aylurs-gtk-shell could not be started."
