--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -20,7 +20,6 @@ exec = sudo dmidecode -t 2 | grep LENOVO -q && hyprctl keyword monitor  DP-3, hi
 # monitor =  DP-3, highres@highr, auto-left,  1.25
 # monitor = eDP-1, highres@highr, auto-right, 1.25
 
-exec = killall -9 ags; ags
 
 # -----------------------------------------------------
 # --------------------- PLUGINS -----------------------
@@ -35,6 +34,7 @@ exec = pkill hypridle; hypridle
 source = ~/.config/hypr/autostart.conf
 source = ~/.config/hypr/environment.conf
 source = ~/.config/hypr/keybinds.conf
+source = ~/.config/hypr/nvidia.conf
 source = ~/.config/hypr/rules.conf
 source = ~/.config/hypr/vanity.conf
 source = ~/.config/hypr/theme.conf
