--- a/home/.config/hypr/nvidia.conf
+++ b/home/.config/hypr/nvidia.conf
@@ -5,10 +5,10 @@ env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
-env = ELECTRON_OZONE_PLATFORM_HINT,auto
+# env = ELECTRON_OZONE_PLATFORM_HINT,auto
 env = NVD_BACKEND,direct
 
 cursor {
- no_hardware_cursors = true
+    no_hardware_cursors = true
 }
 
