--- a/home/.config/hypr/rules.conf
+++ b/home/.config/hypr/rules.conf
@@ -27,22 +27,22 @@ windowrules {
     # ----------------------------
     # ---------- Firefox ---------
     # ----------------------------
-    windowrulev2 = workspace 1, class:^(.*firefox.*)
-    windowrulev2 = opacity 0.96 override 0.92 override, class:^(.*firefox.*)
+    # windowrulev2 = workspace 1, class:^(.*firefox.*)
+    windowrulev2 = opacity 0.98 override 0.96 override, class:^(.*firefox.*)
     windowrulev2 = opacity 1 override 1 override 1 override, class:^(.*firefox.*), title:^(.*WatchSerie.*|.*Twitch.*|.*ZDFmediathek.*|.*YouTube.*|.*Livestream.*|.*F1 TV.*|.*Disney+.*|.*Netflix.*|.*Live.*)
+    # Pop us (e.g., Proton Mail)
+    windowrulev2 = float, class:^(firefox)$, title:^()$
+    windowrulev2 = move 2% 6%, class:^(firefox)$, title:^()$
+    windowrulev2 = pin, class:^(firefox)$, title:^()$
 
 
     # -------------------------
     # ---------- Inkscape --------
     # -------------------------
     windowrulev2 = opacity 1 override 1 override 1 override, class:^(.*Inkscape.*)
-    # windowrulev2 = workspace 6, class:^(.*org.inkscape.Inkscape.*)
     windowrulev2 = float, class:^(.*Inkscape.*)
-    # windowrulev2 = resize, exact 50% 50% class:^(.*Inkscape.*)
     windowrulev2 = size 75% 75%, title:^(.*Inkscape.*)
     windowrulev2 = centerwindow, class:^(.*Inkscape.*)
-    # windowrulev2 = size 40% 40%, title:^(.*org.inkscape.Inkscape.*)
-    # windowrulev2 = move 30% 30%, title:^(.*org.inkscape.Inkscape.*)
 
 
     # --------------------------
@@ -120,7 +120,7 @@ windowrules {
     # ---------------------------------------
     # ---------- Visual Studio Code ---------
     # ---------------------------------------
-    windowrulev2 = opacity 0.95 override 0.90 override, class:^(code)
+    windowrulev2 = opacity 0.98 override 0.94 override, class:^(code)
     windowrulev2 = workspace 3, class:^(.*code.*), title:^(.*Visual Studio Code.*)
     windowrulev2 = float, class:^(.*code.*), title:^(.*Open .*)
     windowrulev2 = size 40% 40%, class:^(.*code.*), title:^(.*Open .*)
