clean up on aisle 5

--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -25,7 +25,7 @@ exec = sudo dmidecode -t 2 | grep LENOVO -q && hyprctl keyword monitor  DP-3, hi
 # --------------------- PLUGINS -----------------------
 # -----------------------------------------------------
 exec-once = hyprpaper
-exec = pkill hypridle; hypridle
+exec = killall -9 hypridle; hypridle
 
 
 # -----------------------------------------------------
