--- a/home/.config/hypr/autostart.conf
+++ b/home/.config/hypr/autostart.conf
@@ -1,5 +1,5 @@
 # https://wiki.archlinux.org/title/Polkit
-exec = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 || hyprctl notify -1 10000 "rgb(ff1ea3)" "polkit-gnome could not be started."
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 || hyprctl notify -1 10000 "rgb(ff1ea3)" "polkit-gnome could not be started."
 
 # https://aylur.github.io/ags-docs/
 exec = killall -9 ags; ags
