--- a/home/.config/hypr/keybinds.conf
+++ b/home/.config/hypr/keybinds.conf
@@ -1,12 +1,11 @@
 binds {
     # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
     
-    bind = CTRL, Space, global, kando:main-menu
+    bind = CTRL, SPACE, global, kando:main-menu
 
     bind = SUPER, RETURN, exec, kitty
-    # bind = ALT, RETURN, exec, [float; pin; move 73% 5%; size 25% 20%] kitty
     bind = ALT, RETURN, exec, ags -t terminal
-    bind = CTRL_ALT, DELETE, exec, ags -t dota
+    # bind = ALT, RETURN, exec, [float; pin; move 27.5% 5%; size 45% 4%] kitty
     
     bind = SUPER, C, setfloating
     bind = SUPER, C, resizeactive, exact 70% 60%
