--- a/home/.config/hypr/autostart.conf
+++ b/home/.config/hypr/autostart.conf
@@ -6,4 +6,4 @@ exec = killall -9 ags; ags
 exec = pgrep ags || hyprctl notify -1 10000 "rgb(ff1ea3)" "aylurs-gtk-shell could not be started."
 
 # https://github.com/kando-menu/kando/blob/main/docs/installing.md?tab=readme-ov-file#platform-specific-notes
-exec-once = /usr/bin/kando
+exec = /usr/bin/kando
