kitty new shortcut; context menu scss; bluetooth sidebar fixes

--- a/home/.config/hypr/keybinds.conf
+++ b/home/.config/hypr/keybinds.conf
@@ -1,14 +1,15 @@
 binds {
     # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
     bind = CTRL, SPACE, global, kando:main-menu
-    bind = ALT, TAB, overview:toggle
+    bind = ALT, TAB, exec, hyprctl dispatch overview:toggle  # could simply use `overview:toggle` instead of exec, but `Invalid Dispatcher` error at startup
 
-    bind = SUPER, RETURN, exec, kitty
-    bind = ALT, RETURN, exec, ags -t terminal
+    # bind = SUPER, RETURN, exec, kitty
+    bind = SUPER, RETURN, exec, bash -c "[ $(hyprctl activeworkspace | grep windows: |  cut -d" " -f2) -ge "1" ] && kitty || kitty --title float"
+    bind = ALT, RETURN, exec, ags -t app-launcher
     # bind = ALT, RETURN, exec, [float; pin; move 27.5% 5%; size 45% 4%] kitty
     
     bind = SUPER, C, setfloating
-    bind = SUPER, C, resizeactive, exact 70% 60%
+    bind = SUPER, C, resizeactive, exact 50% 40%
     bind = SUPER, C, centerwindow
 
     bind = SUPER, P, pin
@@ -19,7 +20,7 @@ binds {
     bind = SUPER_SHIFT, R, exec, hyprctl reload
     bind = SUPER_SHIFT, A, exec, pkill ags; ags
     bind = SUPER, E, exec, nautilus ~
-    bind = SUPER, F, togglefloating,
+    bind = SUPER, F, togglefloating
     bind = SUPER, R, exec, pkill rofi || rofi -show drun -click-to-exit
     # bind = SUPER, O, pseudo,                # dwindle
     # bind = SUPER, P, togglesplit,           # dwindle
@@ -28,12 +29,11 @@ binds {
     bind = SUPER, M, fullscreen
 
     # Execute scripts/programs
-    bind = CTRL_ALT, M, exec, streaming --music
-    bind = CTRL_ALT, O, exec, streaming --orf
+    # bind = CTRL_ALT, M, exec, streaming --music
+    # bind = CTRL_ALT, O, exec, streaming --orf
     bind = CTRL_ALT, L, exec, hyprlock
     bind = CTRL_ALT, I, exec, pgrep -x chromium > /dev/null && pkill -x chromium || chromium --app=https://chat.openai.com &
-    bind = CTRL_ALT, V, exec, alacritty -o "window.opacity=0.0" -t "cava" -e "cava"
-    bind = CTRL_ALT, p, exec, eww active-windows | grep panel -q && eww close panel || eww open panel --screen $(~/.config/hypr/scripts/monitor.sh -m $(~/.config/hypr/scripts/monitor.sh -A))
+    bind = CTRL_ALT, V, exec, kitty --title "cava" --override background_opacity=0 -e "cava" 
 
     # Move focus with mainMod + arrow keys
     bind = SUPER, H, movefocus, l
