--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -2353,7 +2353,7 @@ map ctrl+minus change_font_size all -2.0
 # map kitty_mod+f2 edit_config_file
 # map cmd+,        edit_config_file
 
-: Open the kitty command shell
+#:: Open the kitty command shell
 
 # map kitty_mod+escape kitty_shell window
 
