launcher added via ags

--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -16,7 +16,7 @@ workspace=5
 # --------------------- PLUGINS -----------------------
 # -----------------------------------------------------
 exec-once = hyprpaper
-exec-once = hyprpm reload -n
+exec-once = hyprpm reload  #-n
 exec = killall -9 hypridle; hypridle
 
 
