--- a/home/.config/hypr/keybinds.conf
+++ b/home/.config/hypr/keybinds.conf
@@ -21,7 +21,8 @@ binds {
     bind = SUPER_SHIFT, A, exec, pkill ags; ags
     bind = SUPER, E, exec, nautilus ~
     bind = SUPER, F, togglefloating
-    bind = SUPER, R, exec, pkill rofi || rofi -show drun -click-to-exit
+    # bind = SUPER, R, exec, pkill rofi || rofi -show drun -click-to-exit
+    bind = SUPER, R, exec, ags -t AppLauncher
     # bind = SUPER, O, pseudo,                # dwindle
     # bind = SUPER, P, togglesplit,           # dwindle
     bind = SUPER, O, layoutmsg, swapwithmaster master
