current state; new readme with impression; still lots to do

--- a/home/.config/hypr/keybinds.conf
+++ b/home/.config/hypr/keybinds.conf
@@ -89,5 +89,10 @@ binds {
     # Capturing
     bind = SUPER_SHIFT, s, exec, capture --image
     bind = SUPER_SHIFT, v, exec, capture --video
-    bind = SUPER_SHIFT, v, exec, capture --video
+
+    # Unixporn
+    bind = SUPER_SHIFT, F1, exec, [float; move 1% 5%; size 30% 25%] bash -c "kitty"
+    bind = SUPER_SHIFT, F2, exec, [float; move 1% 35%; size 30% 25%] bash -c "kitty"
+    bind = SUPER_SHIFT, F3, exec, [float; move 1% 65%; size 30% 25%] bash -c "kitty"
+
 }
