--- a/home/.config/hypr/rules.conf
+++ b/home/.config/hypr/rules.conf
@@ -41,10 +41,10 @@ windowrules {
     # -------------------------
     # ---------- Inkscape --------
     # -------------------------
-    # windowrulev2 = opacity 1 override 1 override 1 override, class:^(.*Inkscape.*)
-    windowrulev2 = float, class:^(.*Inkscape.*)
-    windowrulev2 = size 75% 75%, title:^(.*Inkscape.*)
-    windowrulev2 = centerwindow, class:^(.*Inkscape.*)
+    windowrulev2 = opacity 1 override 1 override 1 override, class:^(.*Inkscape.*|.*swappy.*)
+    windowrulev2 = float, class:^(.*Inkscape.*|.*swappy.*)
+    windowrulev2 = size 75% 75%, title:^(.*Inkscape.*|.*swappy.*)
+    windowrulev2 = centerwindow, class:^(.*Inkscape.*|.*swappy.*)
 
 
     # --------------------------
