hyprshot added; mangohud removed; kando stuff added

--- a/home/.config/hypr/keybinds.conf
+++ b/home/.config/hypr/keybinds.conf
@@ -1,40 +1,42 @@
 binds {
     # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-    bind = CTRL, SPACE, global, kando:main-menu
-    bind = ALT, TAB, exec, hyprctl dispatch overview:toggle  # could simply use `overview:toggle` instead of exec, but `Invalid Dispatcher` error at startup
-
-    # bind = SUPER, RETURN, exec, kitty
+    bind = ALT, TAB, exec, hyprctl dispatch overview:toggle
     bind = SUPER, RETURN, exec, bash -c "[ $(hyprctl activeworkspace | grep windows: |  cut -d" " -f2) -ge "1" ] && kitty || kitty --title float"
-    bind = ALT, RETURN, exec, ags -t app-launcher
-    # bind = ALT, RETURN, exec, [float; pin; move 27.5% 5%; size 45% 4%] kitty
-    
+
     bind = SUPER, C, setfloating
     bind = SUPER, C, resizeactive, exact 50% 40%
     bind = SUPER, C, centerwindow
-
+    
+    bind = SUPER, E, exec, nemo ~
+    bind = SUPER, F, togglefloating
+    bind = SUPER, M, fullscreen
+    
     bind = SUPER, P, pin
+    bind = SUPER, O, layoutmsg, swapwithmaster master
     bind = SUPER, U, exec, ~/.config/hypr/scripts/dispatch.sh $(hyprctl activeworkspace | grep ID | cut -d" " -f3 | head -n 1) --move-workspace
-
+    
     bind = SUPER_SHIFT, C, killactive
     bind = SUPER_SHIFT, Q, exit
+    
     bind = SUPER_SHIFT, R, exec, hyprctl reload
     bind = SUPER_SHIFT, A, exec, pkill ags; ags
-    bind = SUPER, E, exec, nautilus ~
-    bind = SUPER, F, togglefloating
-    # bind = SUPER, R, exec, pkill rofi || rofi -show drun -click-to-exit
+    
+    # Aylur's GTK Shell Windows and Kando Pie Menu
     bind = SUPER, R, exec, ags -t AppLauncher
-    # bind = SUPER, O, pseudo,                # dwindle
-    # bind = SUPER, P, togglesplit,           # dwindle
-    bind = SUPER, O, layoutmsg, swapwithmaster master
-    # bind = ALT, TAB, layoutmsg, cyclenext
-    bind = SUPER, M, fullscreen
+    bind = SUPER, S, exec, ags -t SidebarSettings
+    bind = CTRL, SPACE, global, kando:main-menu
 
-    # Execute scripts/programs
-    # bind = CTRL_ALT, M, exec, streaming --music
-    # bind = CTRL_ALT, O, exec, streaming --orf
+    # Capturing
+    bind = , PRINT, exec, hyprshot -m output -m active -z -o ~/Pictures/Screenshots
+    bind = SHIFT, PRINT, exec, hyprshot -m window -z -o ~/Pictures/Screenshots
+    # bind = SUPER_SHIFT, S, exec, hyprshot -m region -z -o ~/Pictures/Screenshots
+    # Manual region screenshot while opening image in swappy
+    bind = SUPER_SHIFT, S, exec, capture --image
+    bind = SUPER_SHIFT, PRINT, exec, capture --video
+
     bind = CTRL_ALT, L, exec, hyprlock
-    bind = CTRL_ALT, I, exec, pgrep -x chromium > /dev/null && pkill -x chromium || chromium --app=https://chat.openai.com &
-    bind = CTRL_ALT, V, exec, kitty --title "cava" --override background_opacity=0 -e "cava" 
+    # bind = CTRL_ALT, I, exec, pgrep -x chromium > /dev/null && pkill -x chromium || chromium --app=https://chat.openai.com &
+    # bind = CTRL_ALT, V, exec, kitty --title "cava" --override background_opacity=0 -e "cava" 
 
     # Move focus with mainMod + arrow keys
     bind = SUPER, H, movefocus, l
@@ -85,10 +87,6 @@ binds {
     # Brightness
     binde = , XF86MonBrightnessUp, exec, ~/.config/hypr/scripts/brightness.sh --up
     binde = , XF86MonBrightnessDown, exec, ~/.config/hypr/scripts/brightness.sh --down
-
-    # Capturing
-    bind = SUPER_SHIFT, s, exec, capture --image
-    bind = SUPER_SHIFT, v, exec, capture --video
 
     # Unixporn
     bind = SUPER_SHIFT, F1, exec, [float; move 1% 5%; size 30% 25%] bash -c "kitty"
