--- a/home/.config/hypr/rules.conf
+++ b/home/.config/hypr/rules.conf
@@ -65,25 +65,12 @@ windowrules {
     # ------------------------
     windowrulev2 = float, class:^(.*mpv.*)
     windowrulev2 = pin, class:^(.*mpv.*)
-    windowrulev2 = move 90.5% 5%, class:^(.*mpv.*)
-    windowrulev2 = size 159 94, class:^(.*mpv.*)
+    windowrulev2 = centerwindow, class:^(.*mpv.*)
+    windowrulev2 = size 50% 50%, class:^(.*mpv.*)
     windowrulev2 = opacity 1 override 1 override 1 override, class:^(.*mpv.*)
 
 
-    # -------------------------
-    # ---------- Rofi ---------
-    # -------------------------
-    windowrulev2 = animation slide, class:^(.*rofi.*)
 
-    windowrulev2 = animation slide, class:^(.*Chromium.*)
-    windowrulev2 = float, class:^(.*Chromium.*)
-    windowrulev2 = pin, class:^(.*Chromium.*)
-    windowrulev2 = move 84% 5%, class:^(.*Chromium.*)
-    windowrulev2 = size 300 400, class:^(.*Chromium.*)
-    windowrulev2 = opacity 0.98 override 0.50 override 0.98 override, class:^(.*Chromium.*)
-
-
-    # ---------------------------
     # ---------- Thunar ---------
     # ---------------------------
     windowrulev2 = float, class:^(.*thunar.*), title:^(.*File System.*)
