hyprpaper for both systems

--- a/home/.config/hypr/hyprpaper.conf
+++ b/home/.config/hypr/hyprpaper.conf
@@ -2,14 +2,19 @@
 
 preload = ~/.local/share/backgrounds/linux-elitist/ecatherina-farias.png
 preload = ~/.local/share/backgrounds/regular/firewatch-dusk.png
+preload = ~/.local/share/backgrounds/regular/bonefire-night.jpg
+preload = ~/.local/share/backgrounds/regular/forest-night.png
+
 splash = false
 
 # ------ Desktop ------
-# wallpaper =  DP-3,~/.local/share/backgrounds/linux-elitist/ecatherina-farias.png
-# wallpaper =  DP-1,~/.local/share/backgrounds/linux-elitist/ecatherina-farias.png
-wallpaper =  DP-3,~/.local/share/backgrounds/regular/firewatch-dusk.png
-wallpaper =  DP-1,~/.local/share/backgrounds/regular/firewatch-dusk.png
+$wallpaper = ~/.local/share/backgrounds/regular/firewatch-dusk.png
+
+wallpaper =  DP-3,$wallpaper
+wallpaper =  DP-1,$wallpaper
 
 # ------ Laptop ------
-# wallpaper = eDP-1,~/.local/share/backgrounds/linux-elitist/ecatherina-farias.png
-# wallpaper =  DP-3,~/.local/share/backgrounds/linux-elitist/ecatherina-farias.png
+$wallpaper = ~/.local/share/backgrounds/regular/bonefire-night.jpg
+
+wallpaper = eDP-1,$wallpaper
+wallpaper =  DP-3,$wallpaper
