sway add; kando chg; hypr chg; ags chg;

--- a/home/.config/hypr/environment.conf
+++ b/home/.config/hypr/environment.conf
@@ -4,7 +4,6 @@ env = XDG_SESSION_DESKTOP, Hyprland
 
 env = _JAVA_AWT_WM_NONEREPARENTING, 1
 env = CLUTTER_BACKEND, wayland
-env = WLR_NO_HARDWARE_CURSORS,1
 
 # NVIDIA
 # https://wiki.hyprland.org/Nvidia/#foreword
@@ -12,10 +11,11 @@ env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-# env = NVD_BACKEND,direct
+# https://wiki.hyprland.org/Nvidia/#va-api-hardware-video-acceleration
+env = NVD_BACKEND,direct
 
 # Electron
-env = ELECTRON_OZONE_PLATFORM_HINT, wayland
+env = ELECTRON_OZONE_PLATFORM_HINT, auto
 
 # Firefox
 env = MOZ_DISABLE_RDD_SANDBOX,1
