--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -39,9 +39,11 @@ xwayland {
     force_zero_scaling = true
 }
 
-# https://wiki.hyprland.org/Nvidia/#environment-variables
 cursor {
-    no_hardware_cursors = true
+    # https://wiki.hyprland.org/Nvidia/#environment-variables
+    # no_hardware_cursors = true
+    no_hardware_cursors = false
+    allow_dumb_copy = true
 }
 
 input {
