--- a/home/.config/hypr/hyprpaper.conf
+++ b/home/.config/hypr/hyprpaper.conf
@@ -17,4 +17,4 @@ wallpaper =  DP-1,$wallpaper
 $wallpaper = ~/.local/share/backgrounds/regular/bonefire-night.jpg
 
 wallpaper = eDP-1,$wallpaper
-wallpaper =  DP-3,$wallpaper
+# wallpaper =  DP-3,$wallpaper
