--- a/home/.config/hypr/vanity.conf
+++ b/home/.config/hypr/vanity.conf
@@ -3,7 +3,7 @@ general {
 
     gaps_in = 2
     gaps_out = 6
-    border_size = 2
+    border_size = 3
     # col.active_border = rgba(000000FF) rgba(61FFCAFF) 45deg
     col.active_border = rgba(000000FF)
     col.inactive_border = rgba(FFFFFF00)
@@ -42,7 +42,7 @@ decoration {
 }
 
 animations {
-    enabled = yes
+    enabled = true
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     # https://www.cssportal.com/css-cubic-bezier-generator/
@@ -66,4 +66,5 @@ animations {
     animation = fadeDim,    1,  25,     default
     animation = workspaces, 1,   4,     easeInQuart,    slidevert
     animation = layers,     1,   5,     scurve,         slide       # rofi
+    first_launch_animation = true
 }
