--- a/home/.config/kando/config.json
+++ b/home/.config/kando/config.json
@@ -1,10 +1,36 @@
 {
   "menuTheme": "default",
-  "darkMenuTheme": "default",
+  "darkMenuTheme": "neon-lights",
   "menuThemeColors": {},
-  "darkMenuThemeColors": {},
-  "enableDarkModeForMenuThemes": false,
-  "sidebarVisible": true,
-  "enableVersionCheck": true,
-  "zoomFactor": 1
+  "darkMenuThemeColors": {
+    "neon-lights": {
+      "glow-color": "rgba(255, 255, 255, 1)",
+      "connector-color": "rgba(255, 68, 61, 0.75)"
+    }
+  },
+  "enableDarkModeForMenuThemes": true,
+  "sidebarVisible": false,
+  "enableVersionCheck": false,
+  "zoomFactor": 1.25,
+  "menuOptions": {
+    "centerDeadZone": 50,
+    "minParentDistance": 150,
+    "dragThreshold": 15,
+    "fadeInDuration": 150,
+    "fadeOutDuration": 200,
+    "enableMarkingMode": true,
+    "enableTurboMode": true,
+    "gestureMinStrokeLength": 150,
+    "gestureMinStrokeAngle": 20,
+    "gestureJitterThreshold": 10,
+    "gesturePauseTimeout": 100,
+    "fixedStrokeLength": 0,
+    "rmbSelectsParent": false,
+    "gamepadBackButton": 1,
+    "gamepadCloseButton": 2
+  },
+  "editorOptions": {
+    "showSidebarButtonVisible": false,
+    "showEditorButtonVisible": false
+  }
 }
