adaptation to hypr 45 and ags 2; still using agsv1

--- a/home/.config/hypr/environment.conf
+++ b/home/.config/hypr/environment.conf
@@ -8,14 +8,14 @@ env = CLUTTER_BACKEND, wayland
 # NVIDIA
 # https://wiki.hyprland.org/Nvidia/#foreword
 env = LIBVA_DRIVER_NAME,nvidia
-env = XDG_SESSION_TYPE,wayland
-env = GBM_BACKEND,nvidia-drm
+# env = XDG_SESSION_TYPE,wayland
+# env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 # https://wiki.hyprland.org/Nvidia/#va-api-hardware-video-acceleration
 env = NVD_BACKEND,direct
 
 # Electron
-env = ELECTRON_OZONE_PLATFORM_HINT, auto
+env = ELECTRON_OZONE_PLATFORM_HINT, wayland
 
 # Firefox
 env = MOZ_DISABLE_RDD_SANDBOX,1
