--- a/home/.config/hypr/keybinds.conf
+++ b/home/.config/hypr/keybinds.conf
@@ -6,24 +6,24 @@ binds {
     bind = SUPER, C, setfloating
     bind = SUPER, C, resizeactive, exact 50% 40%
     bind = SUPER, C, centerwindow
-    
+
     bind = SUPER, E, exec, nemo ~
     bind = SUPER, F, togglefloating
     bind = SUPER, M, fullscreen
-    
+
     bind = SUPER, P, pin
     bind = SUPER, O, layoutmsg, swapwithmaster master
     bind = SUPER, U, exec, ~/.config/hypr/scripts/dispatch.sh $(hyprctl activeworkspace | grep ID | cut -d" " -f3 | head -n 1) --move-workspace
-    
+
     bind = SUPER_SHIFT, C, killactive
     bind = SUPER_SHIFT, Q, exit
-    
+
     bind = SUPER_SHIFT, R, exec, hyprctl reload
-    bind = SUPER_SHIFT, A, exec, pkill ags; ags
-    
+    bind = SUPER_SHIFT, A, exec, pkill agsv1; agsv1
+
     # Aylur's GTK Shell Windows and Kando Pie Menu
-    bind = SUPER, R, exec, ags -t AppLauncher
-    bind = SUPER, S, exec, ags -t SidebarSettings
+    bind = SUPER, R, exec, agsv1 -t AppLauncher
+    bind = SUPER, S, exec, agsv1 -t SidebarSettings
     bind = CTRL, SPACE, global, kando:main-menu
 
     # Capturing
@@ -36,7 +36,7 @@ binds {
 
     bind = CTRL_ALT, L, exec, hyprlock
     # bind = CTRL_ALT, I, exec, pgrep -x chromium > /dev/null && pkill -x chromium || chromium --app=https://chat.openai.com &
-    # bind = CTRL_ALT, V, exec, kitty --title "cava" --override background_opacity=0 -e "cava" 
+    # bind = CTRL_ALT, V, exec, kitty --title "cava" --override background_opacity=0 -e "cava"
 
     # Move focus with mainMod + arrow keys
     bind = SUPER, H, movefocus, l
