--- a/home/.config/hypr/vanity.conf
+++ b/home/.config/hypr/vanity.conf
@@ -32,13 +32,16 @@ decoration {
     dim_strength = 0.5
     dim_special = 0.5
 
-    drop_shadow = false
-    shadow_ignore_window = true
-    shadow_range = 5
-    shadow_render_power = 10
+    shadow {
 
-    col.shadow = 0xFFFFFF11
-    col.shadow_inactive = 0x000000FF
+    enabled = false
+    ignore_window = true
+    range = 5
+    render_power = 10
+
+    color = 0xFFFFFF11
+    color_inactive = 0x000000FF
+    }
 }
 
 animations {
